# cosmic-applet-homey

./: .gitignore  COSMIC_PANEL_APPLET_GUIDE.md  Cargo.toml  LICENSE  README.md  install.sh  justfile
.github/workflows/: ci.yml
data/: com.github.cosmic-applet-homey.desktop
src/: lib.rs  main.rs  window.rs
