[package]
name = "cosmic-applet-homey"
version = "0.1.0"
edition = "2021"
description = "A COSMIC panel applet that opens the Homey dashboard"
license = "MIT"
readme = "README.md"
repository = "git@github.com:voyagen/cosmic-applet-homey.git"
keywords = ["cosmic", "applet", "homey"]
categories = ["gui"]

[lib]
name = "cosmic_applet_homey"
path = "src/lib.rs"

[dependencies]
ashpd = { version = "0.12", default-features = false, features = ["tokio", "wayland"] }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
  "applet",
  "tokio",
  "wayland",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"
open = "5"
url = "2"

[profile.release]
strip = true
lto = true
