[package]
name = "cosmic-applet-homey"
version = "0.1.0"
edition = "2021"
description = "A COSMIC panel applet that opens the Homey dashboard"
license = "MIT"
readme = "README.md"
repository = "git@github.com:voyagen/cosmic-applet-homey.git"
keywords = ["cosmic", "applet", "homey"]
categories = ["gui"]

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
  "applet",
  "tokio",
  "wayland",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"
open = "5"

[profile.release]
strip = true
lto = true
